--- a/src/main/java/org/wicketTutorial/helloworld/HomePage.html
+++ b/src/main/java/org/wicketTutorial/helloworld/HomePage.html
@@ -8,7 +8,7 @@
 <wicket:extend>
     <h1 wicket:id="helloMessage"></h1>
     <h2>
-        <a href="https://v.perm.ru">v.perm.ru 8</a>
+        <a href="https://v.perm.ru">v.perm.ru 8 (HomePage.html)</a>
     </h2>
 </wicket:extend>
 </body>
